S5/THL/TP/TP3/build/parser.output
Grammaire

    0 $accept: programme $end

    1 programme: instruction NL programme
    2          | END NL

    3 instruction: expression
    4            | affectation

    5 expression: operation

    6 affectation: '='

    7 operation: NUMBER
    8          | '(' operation ')'
    9          | operation '+' operation
   10          | operation '-' operation
   11          | operation '*' operation
   12          | operation '/' operation
   13          | '-' operation


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 8
')' (41) 8
'*' (42) 11
'+' (43) 9
'-' (45) 10 13
'/' (47) 12
'=' (61) 6
error (256)
NL (258) 1 2
END (259) 2
NUMBER (260) 7
NEG (261)


Non-terminaux, suivis des règles où ils apparaissent

$accept (14)
    à gauche: 0
programme (15)
    à gauche: 1 2, à droite: 0 1
instruction (16)
    à gauche: 3 4, à droite: 1
expression (17)
    à gauche: 5, à droite: 3
affectation (18)
    à gauche: 6, à droite: 4
operation (19)
    à gauche: 7 8 9 10 11 12 13, à droite: 5 8 9 10 11 12 13


État 0

    0 $accept: . programme $end

    END     décalage et aller à l'état 1
    NUMBER  décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '='     décalage et aller à l'état 4
    '('     décalage et aller à l'état 5

    programme    aller à l'état 6
    instruction  aller à l'état 7
    expression   aller à l'état 8
    affectation  aller à l'état 9
    operation    aller à l'état 10


État 1

    2 programme: END . NL

    NL  décalage et aller à l'état 11


État 2

    7 operation: NUMBER .

    $défaut  réduction par utilisation de la règle 7 (operation)


État 3

   13 operation: '-' . operation

    NUMBER  décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 5

    operation  aller à l'état 12


État 4

    6 affectation: '=' .

    $défaut  réduction par utilisation de la règle 6 (affectation)


État 5

    8 operation: '(' . operation ')'

    NUMBER  décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 5

    operation  aller à l'état 13


État 6

    0 $accept: programme . $end

    $end  décalage et aller à l'état 14


État 7

    1 programme: instruction . NL programme

    NL  décalage et aller à l'état 15


État 8

    3 instruction: expression .

    $défaut  réduction par utilisation de la règle 3 (instruction)


État 9

    4 instruction: affectation .

    $défaut  réduction par utilisation de la règle 4 (instruction)


État 10

    5 expression: operation .
    9 operation: operation . '+' operation
   10          | operation . '-' operation
   11          | operation . '*' operation
   12          | operation . '/' operation

    '-'  décalage et aller à l'état 16
    '+'  décalage et aller à l'état 17
    '*'  décalage et aller à l'état 18
    '/'  décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 5 (expression)


État 11

    2 programme: END NL .

    $défaut  réduction par utilisation de la règle 2 (programme)


État 12

    9 operation: operation . '+' operation
   10          | operation . '-' operation
   11          | operation . '*' operation
   12          | operation . '/' operation
   13          | '-' operation .

    $défaut  réduction par utilisation de la règle 13 (operation)


État 13

    8 operation: '(' operation . ')'
    9          | operation . '+' operation
   10          | operation . '-' operation
   11          | operation . '*' operation
   12          | operation . '/' operation

    '-'  décalage et aller à l'état 16
    '+'  décalage et aller à l'état 17
    '*'  décalage et aller à l'état 18
    '/'  décalage et aller à l'état 19
    ')'  décalage et aller à l'état 20


État 14

    0 $accept: programme $end .

    $défaut  accepter


État 15

    1 programme: instruction NL . programme

    END     décalage et aller à l'état 1
    NUMBER  décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '='     décalage et aller à l'état 4
    '('     décalage et aller à l'état 5

    programme    aller à l'état 21
    instruction  aller à l'état 7
    expression   aller à l'état 8
    affectation  aller à l'état 9
    operation    aller à l'état 10


État 16

   10 operation: operation '-' . operation

    NUMBER  décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 5

    operation  aller à l'état 22


État 17

    9 operation: operation '+' . operation

    NUMBER  décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 5

    operation  aller à l'état 23


État 18

   11 operation: operation '*' . operation

    NUMBER  décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 5

    operation  aller à l'état 24


État 19

   12 operation: operation '/' . operation

    NUMBER  décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 5

    operation  aller à l'état 25


État 20

    8 operation: '(' operation ')' .

    $défaut  réduction par utilisation de la règle 8 (operation)


État 21

    1 programme: instruction NL programme .

    $défaut  réduction par utilisation de la règle 1 (programme)


État 22

    9 operation: operation . '+' operation
   10          | operation . '-' operation
   10          | operation '-' operation .
   11          | operation . '*' operation
   12          | operation . '/' operation

    '*'  décalage et aller à l'état 18
    '/'  décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 10 (operation)


État 23

    9 operation: operation . '+' operation
    9          | operation '+' operation .
   10          | operation . '-' operation
   11          | operation . '*' operation
   12          | operation . '/' operation

    '*'  décalage et aller à l'état 18
    '/'  décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 9 (operation)


État 24

    9 operation: operation . '+' operation
   10          | operation . '-' operation
   11          | operation . '*' operation
   11          | operation '*' operation .
   12          | operation . '/' operation

    $défaut  réduction par utilisation de la règle 11 (operation)


État 25

    9 operation: operation . '+' operation
   10          | operation . '-' operation
   11          | operation . '*' operation
   12          | operation . '/' operation
   12          | operation '/' operation .

    $défaut  réduction par utilisation de la règle 12 (operation)
